--- a/components/Header.module.css
+++ b/components/Header.module.css
@@ -24,6 +24,7 @@
   min-width: 150px;
   height: 150px;
   flex-shrink: 0;
+  margin-left: -100px;
 }
 
 .logoImage {
@@ -234,6 +235,7 @@
   .headerLogo {
     min-width: 90px;
     height: 90px;
+    margin-left: -50px;
   }
 
   .logoImage {
