Update services hero image filename and center service titles

--- a/app/services/page.module.css
+++ b/app/services/page.module.css
@@ -54,6 +54,7 @@
 
 .serviceHeader {
   margin-bottom: var(--spacing-lg);
+  text-align: center;
 }
 
 .serviceHeader h2 {
@@ -129,6 +130,7 @@
     grid-template-columns: 1fr;
   }
 }
+
 
 
 
